prevent scrollling on smaller screens

--- a/src/home/components/ContentWidget.css
+++ b/src/home/components/ContentWidget.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100vw;
   position: relative;
+  overflow: hidden;
   margin-top: 20px;
 }
 .card {
